投稿用に編集した

--- a/qiita_post.html
+++ b/qiita_post.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="qiita_post.css" />
+    <meta name="viewport" content="width=devise-width,initial-scale=1.0" />
     <title>qiita_post_demo</title>
   </head>
   <body>
-    <h1>qiita_post_demo</h1> <!--コメントを書ける。この部分はブラウザには表示されない-->
+    <h1>qiita_post_demo</h1>
+    <!--文字色：赤-->
+    <h1 id="word-blue">qiita_post_demo2</h1>
+    <!--文字色：青-->
+
     <div class="box1">
       <div class="box2"></div>
     </div>
